Graphical interface added
Still need some improvement

--- a/Index.html
+++ b/Index.html
@@ -11,13 +11,15 @@
 <body>
 <div id="gameField">
     <div id="buttons">
-        <button class="selectOp" id="rock">Rock</button>
-        <button class="selectOp" id="paper">Paper</button>
-        <button class="selectOp" id="scissors">Scissors</button>
-        <button class="selectOp" id="lizard">Lizard</button>
-        <button class="selectOp" id="spock">Spock</button>
+        <button class="selectOp" id="rock"><img src="Rock.jpg" width="100px"></button>
+        <button class="selectOp" id="paper"><img src="Paper.jpg"width="100px"></button>
+        <button class="selectOp" id="scissors"><img src="Scissors.jpg"width="100px"></button>
+        <button class="selectOp" id="lizard"><img src="Lizard.jpg"width="100px"></button>
+        <button class="selectOp" id="spock"><img src="Spock.jpg"width="100px"></button>
     </div>
-    <div id="pcChoice">pcChoice is here</div>
+    <div id="pcChoice">
+        <button id="pcImage"><img src="Rock.jpg" width="100px"></button>
+    </div>
 
 
 </div>
