--- a/Index.html
+++ b/Index.html
@@ -24,6 +24,8 @@
         <button id="pcImage"><img src="Rock.jpg" width="100px"></button>
         <p class="text" id="computerText">Opponent choice is completely random!</p>
     </div>
+    <h2 id="current"></h2>
+    <h2 id="scores">Scores</h2>
 
 
 </div>
